--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,29 +1,19 @@
 steps:
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['install']
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'test-unit']
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'lint']
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'build']
-- name: gcr.io/cloud-builders/gcloud
-  args:
-  - kms
-  - decrypt
-  - --ciphertext-file=gcloud-env.yaml.enc
-  - --plaintext-file=gcloud-env.yaml
-  - --location=global
-  - --keyring=build-ring
-  - --key=env-enc-key
-- name: 'gcr.io/cloud-builders/gcloud'
-  args:
-  - functions
-  - deploy
-  - welcome-email
-  - --source=.
-  - --trigger-http
-  - --runtime=nodejs10
-  - --env-vars-file=gcloud-env.yaml
-  - --region=us-east1
-  - --entry-point=createProfile
+  - name: "gcr.io/cloud-builders/npm"
+    args: ["install"]
+  - name: "gcr.io/cloud-builders/npm"
+    args: ["run", "test-unit"]
+  - name: "gcr.io/cloud-builders/npm"
+    args: ["run", "lint"]
+  - name: "gcr.io/cloud-builders/npm"
+    args: ["run", "build"]
+  - name: "gcr.io/cloud-builders/gcloud"
+    args:
+      - functions
+      - deploy
+      - profile-create
+      - --source=.
+      - --trigger-http
+      - --runtime=nodejs10
+      - --region=us-east1
+      - --entry-point=createProfileFunction
