--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "profile-create-function",
+  "name": "profile-ops-function",
   "description": "Cloud Function: Bookit Profile Creation Function",
   "main": "dist/index.js",
   "scripts": {
@@ -16,10 +16,13 @@
     }
   },
   "dependencies": {
+    "@google-cloud/firestore": "^2.3.0",
+    "http-status-codes": "^1.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/http-status-codes": "^1.2.0",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.8",
     "@types/sinon": "^7.0.13",
