--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^2.3.0",
-    "http-status-codes": "^1.3.2"
+    "http-status-codes": "^1.3.2",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
     "@types/chai-as-promised": "^7.1.2",
     "@types/http-status-codes": "^1.2.0",
+    "@types/lodash": "^4.14.141",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.8",
     "@types/sinon": "^7.0.13",
