--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^2.3.0",
+    "ajv": "^6.10.2",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@types/ajv": "^1.0.0",
     "@types/chai": "^4.2.3",
     "@types/chai-as-promised": "^7.1.2",
     "@types/http-status-codes": "^1.2.0",
