--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Function: Bookit Profile Creation Function",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist.index.js",
+    "start": "functions-framework --source dist/index.js --target=$FUNCTION",
     "lint": "grunt tslint",
     "grunt": "grunt default",
     "build": "grunt ts",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^2.3.0",
+    "@google-cloud/functions-framework": "^1.3.2",
     "ajv": "^6.10.2",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15"
