--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,34 +1,46 @@
 steps:
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["install"]
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["run", "test-unit"]
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["run", "lint"]
+  # - name: "gcr.io/cloud-builders/npm"
+  #   args: ["install"]
+  # - name: "gcr.io/cloud-builders/npm"
+  #   args: ["run", "test-unit"]
+  # - name: "gcr.io/cloud-builders/npm"
+  #   args: ["run", "lint"]
   - name: "gcr.io/cloud-builders/npm"
     id: build
-    args: ["run", "build"]
+    args: ["run", "tsc"]
+  # - name: "gcr.io/cloud-builders/gcloud"
+  #   waitFor:
+  #     - build
+  #   args:
+  #     - functions
+  #     - deploy
+  #     - profile-create
+  #     - --source=.
+  #     - --trigger-http
+  #     - --runtime=nodejs10
+  #     - --region=us-central1
+  #     - --entry-point=createProfileFunction
+  # - name: "gcr.io/cloud-builders/gcloud"
+  #   waitFor:
+  #     - build
+  #   args:
+  #     - functions
+  #     - deploy
+  #     - profile-query
+  #     - --source=.
+  #     - --trigger-http
+  #     - --runtime=nodejs10
+  #     - --region=us-central1
+  #     - --entry-point=queryProfileFunction
   - name: "gcr.io/cloud-builders/gcloud"
-    waitFor:
-      - build
+    # waitFor:
+    #   - build
     args:
       - functions
       - deploy
-      - profile-create
+      - profile-replace
       - --source=.
       - --trigger-http
       - --runtime=nodejs10
       - --region=us-central1
-      - --entry-point=createProfileFunction
-  - name: "gcr.io/cloud-builders/gcloud"
-    waitFor:
-      - build
-    args:
-      - functions
-      - deploy
-      - profile-query
-      - --source=.
-      - --trigger-http
-      - --runtime=nodejs10
-      - --region=us-central1
-      - --entry-point=queryProfileFunction
+      - --entry-point=replaceProfileFunction
