--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -1,9 +1,10 @@
 steps:
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['install']
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'test-unit']
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'lint']
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'build']
+  - name: "gcr.io/cloud-builders/npm"
+    id: root-install
+    args: ["install"]
+  - name: "gcr.io/cloud-builders/npm"
+    id: lint
+    args: ["run", "lint"]
+  - name: "gcr.io/cloud-builders/npm"
+    id: test-unit
+    args: ["run", "test-unit"]
