--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,46 +1,102 @@
 steps:
-  # - name: "gcr.io/cloud-builders/npm"
-  #   args: ["install"]
-  # - name: "gcr.io/cloud-builders/npm"
-  #   args: ["run", "test-unit"]
-  # - name: "gcr.io/cloud-builders/npm"
-  #   args: ["run", "lint"]
   - name: "gcr.io/cloud-builders/npm"
-    id: build
-    args: ["run", "tsc"]
-  # - name: "gcr.io/cloud-builders/gcloud"
-  #   waitFor:
-  #     - build
-  #   args:
-  #     - functions
-  #     - deploy
-  #     - profile-create
-  #     - --source=.
-  #     - --trigger-http
-  #     - --runtime=nodejs10
-  #     - --region=us-central1
-  #     - --entry-point=createProfileFunction
-  # - name: "gcr.io/cloud-builders/gcloud"
-  #   waitFor:
-  #     - build
-  #   args:
-  #     - functions
-  #     - deploy
-  #     - profile-query
-  #     - --source=.
-  #     - --trigger-http
-  #     - --runtime=nodejs10
-  #     - --region=us-central1
-  #     - --entry-point=queryProfileFunction
-  - name: "gcr.io/cloud-builders/gcloud"
-    # waitFor:
-    #   - build
+    id: root-install
+    args: ["install"]
+  - name: "gcr.io/cloud-builders/npm"
+    id: lint
+    args: ["run", "lint"]
+  - name: "gcr.io/cloud-builders/npm"
+    id: test-unit
+    args: ["run", "test-unit"]
+
+  # Build and push docker images
+  - name: "gcr.io/cloud-builders/docker"
+    id: create-profile:0.0.1
+    waitFor:
+      - test-unit
     args:
-      - functions
+      - build
+      - --build-arg
+      - service=create-profile
+      - -t
+      - gcr.io/sweng-581-capstone/create-profile:0.0.1
+      - .
+  - name: "gcr.io/cloud-builders/docker"
+    id: push-create-profile
+    waitFor:
+      - create-profile:0.0.1
+    args: ["push", "gcr.io/sweng-581-capstone/create-profile:0.0.1"]
+  - name: "gcr.io/cloud-builders/docker"
+    id: query-profile:0.0.1
+    waitFor:
+      - test-unit
+    args:
+      - build
+      - --build-arg
+      - service=query-profile
+      - -t
+      - gcr.io/sweng-581-capstone/query-profile:0.0.1
+      - .
+  - name: "gcr.io/cloud-builders/docker"
+    id: push-query-profile
+    waitFor:
+      - query-profile:0.0.1
+    args: ["push", "gcr.io/sweng-581-capstone/query-profile:0.0.1"]
+  - name: "gcr.io/cloud-builders/docker"
+    id: update-profile:0.0.1
+    waitFor:
+      - test-unit
+    args:
+      - build
+      - --build-arg
+      - service=update-profile
+      - -t
+      - gcr.io/sweng-581-capstone/update-profile:0.0.1
+      - .
+  - name: "gcr.io/cloud-builders/docker"
+    id: push-update-profile
+    waitFor:
+      - update-profile:0.0.1
+    args: ["push", "gcr.io/sweng-581-capstone/update-profile:0.0.1"]
+
+  # Deploy to cloud run
+  - name: "gcr.io/cloud-builders/gcloud"
+    waitFor:
+      - push-create-profile
+    args:
+      - beta
+      - run
       - deploy
-      - profile-replace
-      - --source=.
-      - --trigger-http
-      - --runtime=nodejs10
+      - create-profile
+      - --image=gcr.io/sweng-581-capstone/create-profile:0.0.1
       - --region=us-central1
-      - --entry-point=replaceProfileFunction
+      - --platform=managed
+      - --allow-unauthenticated
+  - name: "gcr.io/cloud-builders/gcloud"
+    waitFor:
+      - push-query-profile
+    args:
+      - beta
+      - run
+      - deploy
+      - query-profile
+      - --image=gcr.io/sweng-581-capstone/query-profile:0.0.1
+      - --region=us-central1
+      - --platform=managed
+      - --allow-unauthenticated
+  - name: "gcr.io/cloud-builders/gcloud"
+    waitFor:
+      - push-update-profile
+    args:
+      - beta
+      - run
+      - deploy
+      - update-profile
+      - --image=gcr.io/sweng-581-capstone/update-profile:0.0.1
+      - --region=us-central1
+      - --platform=managed
+      - --allow-unauthenticated
+images:
+  - "gcr.io/sweng-581-capstone/create-profile:0.0.1"
+  - "gcr.io/sweng-581-capstone/query-profile:0.0.1"
+  - "gcr.io/sweng-581-capstone/update-profile:0.0.1"
