--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "Cloud Function: Bookit Profile Creation Function",
   "main": "dist/index.js",
   "scripts": {
-    "start": "functions-framework --source dist/index.js --target=$FUNCTION",
-    "lint": "grunt tslint",
+    "lint": "eslint src",
     "grunt": "grunt default",
     "build": "grunt build",
     "tsc": "tsc",
@@ -18,37 +17,24 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^2.3.0",
-    "@google-cloud/functions-framework": "^1.3.2",
     "ajv": "^6.10.2",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@types/ajv": "^1.0.0",
-    "@types/chai": "^4.2.3",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/http-status-codes": "^1.2.0",
-    "@types/lodash": "^4.14.141",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.8",
-    "@types/sinon": "^7.0.13",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "cross-env": "^6.0.0",
+    "eslint": "^6.5.1",
     "grunt": "^1.0.4",
+    "grunt-eslint": "^22.0.0",
     "grunt-mocha-test": "^0.13.3",
     "grunt-run": "^0.8.1",
     "grunt-simple-nyc": "^3.0.0",
-    "grunt-tslint": "^5.0.2",
     "husky": "^3.0.7",
     "mocha": "^6.2.1",
     "nyc": "^14.1.1",
-    "sinon": "^7.5.0",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.6.3"
+    "sinon": "^7.5.0"
   },
   "engines": {
     "node": "10"
