--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -3,6 +3,18 @@ steps:
     id: root-install
     args: ["install"]
   - name: "gcr.io/cloud-builders/npm"
+    id: create-profile-install
+    args: ["install"]
+    dir: src/services/create-profile
+  - name: "gcr.io/cloud-builders/npm"
+    id: query-profile-install
+    args: ["install"]
+    dir: src/services/query-profile
+  - name: "gcr.io/cloud-builders/npm"
+    id: update-profile-install
+    args: ["install"]
+    dir: src/services/update-profile
+  - name: "gcr.io/cloud-builders/npm"
     id: lint
     args: ["run", "lint"]
   - name: "gcr.io/cloud-builders/npm"
