--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^2.3.0",
+    "@google-cloud/logging": "^5.3.1",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15"
   },
