--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": [
-        "npm run lint",
-        "npm run test"
-      ]
+      "pre-commit": "npm run lint && npm run test"
     }
   },
   "dependencies": {
@@ -45,11 +42,6 @@
     "chai-as-promised": "^7.1.1",
     "cross-env": "^6.0.0",
     "eslint": "^6.5.1",
-    "grunt": "^1.0.4",
-    "grunt-eslint": "^22.0.0",
-    "grunt-mocha-test": "^0.13.3",
-    "grunt-run": "^0.8.1",
-    "grunt-simple-nyc": "^3.0.0",
     "husky": "^3.0.7",
     "mocha": "^6.2.1",
     "nyc": "^14.1.1",
