--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -19,4 +19,4 @@ steps:
     args: ["run", "lint"]
   - name: "gcr.io/cloud-builders/npm"
     id: test-unit
-    args: ["run", "test-unit"]
+    args: ["run", "test"]
