--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^2.3.0",
-    "@google-cloud/logging": "^5.3.1",
+    "@google-cloud/logging-winston": "^2.1.0",
     "http-status-codes": "^1.3.2",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
