--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -11,6 +11,12 @@ steps:
     dir: src/services/create-profile
 
   - name: "node:10.16.3"
+    id: delete-profile-install
+    entrypoint: npm
+    args: ["install"]
+    dir: src/services/delete-profile
+
+  - name: "node:10.16.3"
     id: query-profile-install
     entrypoint: npm
     args: ["install"]
@@ -26,7 +32,7 @@ steps:
     id: lint
     entrypoint: npm
     args: ["run", "lint"]
-    
+
   - name: "node:10.16.3"
     id: test-unit
     entrypoint: npm
