--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,6 +13,14 @@ steps:
     dir: src/services/create-profile
 
   - name: "node:10.16.3"
+    id: delete-profile-install
+    waitFor:
+      - root-install
+    entrypoint: npm
+    args: ["install"]
+    dir: src/services/delete-profile
+
+  - name: "node:10.16.3"
     id: query-profile-install
     waitFor:
       - root-install
@@ -27,7 +35,7 @@ steps:
     entrypoint: npm
     args: ["install"]
     dir: src/services/update-profile
-  
+
   # Validate build
   - name: "node:10.16.3"
     id: lint
@@ -39,7 +47,7 @@ steps:
     entrypoint: npm
     args: ["run", "test"]
 
-  # Build and push docker images
+  # Build and push docker image: Create Profile
   - name: "gcr.io/cloud-builders/docker"
     id: create-profile:0.0.1
     waitFor:
@@ -58,6 +66,26 @@ steps:
       - create-profile:0.0.1
     args: ["push", "gcr.io/sweng-581-capstone/create-profile:0.0.1"]
 
+  # Build and push docker image: Delete Profile
+  - name: "gcr.io/cloud-builders/docker"
+    id: delete-profile:0.0.1
+    waitFor:
+      - test-unit
+    args:
+      - build
+      - --build-arg
+      - service=delete-profile
+      - -t
+      - gcr.io/sweng-581-capstone/delete-profile:0.0.1
+      - .
+
+  - name: "gcr.io/cloud-builders/docker"
+    id: push-delete-profile
+    waitFor:
+      - delete-profile:0.0.1
+    args: ["push", "gcr.io/sweng-581-capstone/delete-profile:0.0.1"]
+
+  # Build and push docker image: Query Profile
   - name: "gcr.io/cloud-builders/docker"
     id: query-profile:0.0.1
     waitFor:
@@ -76,6 +104,7 @@ steps:
       - query-profile:0.0.1
     args: ["push", "gcr.io/sweng-581-capstone/query-profile:0.0.1"]
 
+  # Build and push docker image: Update Profile
   - name: "gcr.io/cloud-builders/docker"
     id: update-profile:0.0.1
     waitFor:
@@ -110,6 +139,19 @@ steps:
 
   - name: "gcr.io/cloud-builders/gcloud"
     waitFor:
+      - push-delete-profile
+    args:
+      - beta
+      - run
+      - deploy
+      - delete-profile
+      - --image=gcr.io/sweng-581-capstone/delete-profile:0.0.1
+      - --region=us-central1
+      - --platform=managed
+      - --allow-unauthenticated
+
+  - name: "gcr.io/cloud-builders/gcloud"
+    waitFor:
       - push-query-profile
     args:
       - beta
@@ -133,8 +175,9 @@ steps:
       - --region=us-central1
       - --platform=managed
       - --allow-unauthenticated
-      
+
 images:
   - "gcr.io/sweng-581-capstone/create-profile:0.0.1"
+  - "gcr.io/sweng-581-capstone/delete-profile:0.0.1"
   - "gcr.io/sweng-581-capstone/query-profile:0.0.1"
   - "gcr.io/sweng-581-capstone/update-profile:0.0.1"
