--- a/src/services/delete-profile/package.json
+++ b/src/services/delete-profile/package.json
@@ -3,11 +3,12 @@
   "description": "Profile Delete Service",
   "main": "index.js",
   "scripts": {
-    "start": "functions-framework --source index.js --target=createProfile"
+    "start": "functions-framework --source index.js --target=app"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^1.3.2",
-    "@hapi/joi": "^16.1.7"
+    "@hapi/joi": "^16.1.7",
+    "express": "^4.17.1"
   },
   "devDependencies": {},
   "engines": {
