--- a/src/services/query-profile/package.json
+++ b/src/services/query-profile/package.json
@@ -3,10 +3,11 @@
   "description": "Profile Query Service",
   "main": "index.js",
   "scripts": {
-    "start": "functions-framework --source index.js --target=queryProfile"
+    "start": "functions-framework --source index.js --target=app"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^1.3.2"
+    "@google-cloud/functions-framework": "^1.3.2",
+    "express": "^4.17.1"
   },
   "devDependencies": {},
   "engines": {
