--- a/src/services/query-profile/package.json
+++ b/src/services/query-profile/package.json
@@ -1,12 +1,12 @@
 {
   "name": "profile-query-service",
   "description": "Profile Query Service",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "functions-framework --source index.js --target=app"
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^1.3.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {},
