--- a/src/services/update-profile/package.json
+++ b/src/services/update-profile/package.json
@@ -1,13 +1,13 @@
 {
   "name": "profile-update-service",
-  "description": "Profile Update Sevice",
-  "main": "index.js",
+  "description": "Profile Update Service",
+  "main": "src/index.js",
   "scripts": {
-    "start": "functions-framework --source index.js --target=updateProfile"
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^1.3.2",
-    "@hapi/joi": "^16.1.7"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {},
   "engines": {
