--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "@google-cloud/logging-winston": "^2.1.0",
     "ajv": "^6.10.2",
     "http-status-codes": "^1.3.2",
-    "lodash": "^4.17.15",
-    "winston": "^3.2.1"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "chai": "^4.2.0",
