--- a/src/services/create-profile/package.json
+++ b/src/services/create-profile/package.json
@@ -3,7 +3,7 @@
   "description": "Profile Create Service",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "NODE_ENV=production node src/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
