--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -29,6 +29,18 @@ steps:
     dir: src/services/update-profile
 
   - name: "node:10.16.3"
+    id: provider-create-notification-processor-install
+    entrypoint: npm
+    args: ["install"]
+    dir: src/services/provider-create-notification-processor
+
+  - name: "node:10.16.3"
+    id: provider-delete-notification-processor-install
+    entrypoint: npm
+    args: ["install"]
+    dir: src/services/provider-delete-notification-processor
+
+  - name: "node:10.16.3"
     id: lint
     entrypoint: npm
     args: ["run", "lint"]
