--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,261 +3,69 @@ steps:
     id: root-install
     entrypoint: npm
     args: ["install"]
-
-  - name: "node:10.16.3"
-    id: create-profile-install
+  
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: fork-build-create-profile
+    entrypoint: 'bash'
     waitFor:
       - root-install
-    entrypoint: npm
-    args: ["install"]
-    dir: src/services/create-profile
+    args:
+    - '-c'
+    - |
+      gcloud builds submit $d --config=./src/services/create-profile/cloudbuild.yaml
+      wait
 
-  - name: "node:10.16.3"
-    id: delete-profile-install
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: fork-build-delete-profile
+    entrypoint: 'bash'
     waitFor:
       - root-install
-    entrypoint: npm
-    args: ["install"]
-    dir: src/services/delete-profile
+    args:
+    - '-c'
+    - |
+      gcloud builds submit $d --config=./src/services/delete-profile/cloudbuild.yaml
+      wait
 
-  - name: "node:10.16.3"
-    id: query-profile-install
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: fork-build-query-profile
+    entrypoint: 'bash'
     waitFor:
       - root-install
-    entrypoint: npm
-    args: ["install"]
-    dir: src/services/query-profile
+    args:
+    - '-c'
+    - |
+      gcloud builds submit $d --config=./src/services/query-profile/cloudbuild.yaml
+      wait
 
-  - name: "node:10.16.3"
-    id: update-profile-install
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: fork-build-update-profile
+    entrypoint: 'bash'
     waitFor:
       - root-install
-    entrypoint: npm
-    args: ["install"]
-    dir: src/services/update-profile
-
-  - name: "node:10.16.3"
-    id: provider-create-notification-processor-install
-    entrypoint: npm
-    args: ["install"]
-    dir: src/services/provider-create-notification-processor
-
-  - name: "node:10.16.3"
-    id: provider-delete-notification-processor-install
-    entrypoint: npm
-    args: ["install"]
-    dir: src/services/provider-delete-notification-processor
-
-  # Validate build
-  - name: "node:10.16.3"
-    id: lint
-    entrypoint: npm
-    args: ["run", "lint"]
-
-  - name: "node:10.16.3"
-    id: test-unit
-    entrypoint: npm
-    args: ["run", "test"]
-
-  # Build and push docker image: Create Profile
-  - name: "gcr.io/cloud-builders/docker"
-    id: create-profile:0.0.1
-    waitFor:
-      - test-unit
     args:
-      - build
-      - --build-arg
-      - service=create-profile
-      - -t
-      - gcr.io/sweng-581-capstone/create-profile:0.0.1
-      - .
+    - '-c'
+    - |
+      gcloud builds submit $d --config=./src/services/update-profile/cloudbuild.yaml
+      wait
 
-  - name: "gcr.io/cloud-builders/docker"
-    id: push-create-profile
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: fork-build-provider-create-notification-processor
+    entrypoint: 'bash'
     waitFor:
-      - create-profile:0.0.1
-    args: ["push", "gcr.io/sweng-581-capstone/create-profile:0.0.1"]
-
-  # Build and push docker image: Delete Profile
-  - name: "gcr.io/cloud-builders/docker"
-    id: delete-profile:0.0.1
-    waitFor:
-      - test-unit
+      - root-install
     args:
-      - build
-      - --build-arg
-      - service=delete-profile
-      - -t
-      - gcr.io/sweng-581-capstone/delete-profile:0.0.1
-      - .
+    - '-c'
+    - |
+      gcloud builds submit $d --config=./src/services/provider-create-notification-processor/cloudbuild.yaml
+      wait
 
-  - name: "gcr.io/cloud-builders/docker"
-    id: push-delete-profile
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: fork-build-provider-delete-notification-processor
+    entrypoint: 'bash'
     waitFor:
-      - delete-profile:0.0.1
-    args: ["push", "gcr.io/sweng-581-capstone/delete-profile:0.0.1"]
-
-  # Build and push docker image: Query Profile
-  - name: "gcr.io/cloud-builders/docker"
-    id: query-profile:0.0.1
-    waitFor:
-      - test-unit
+      - root-install
     args:
-      - build
-      - --build-arg
-      - service=query-profile
-      - -t
-      - gcr.io/sweng-581-capstone/query-profile:0.0.1
-      - .
-
-  - name: "gcr.io/cloud-builders/docker"
-    id: push-query-profile
-    waitFor:
-      - query-profile:0.0.1
-    args: ["push", "gcr.io/sweng-581-capstone/query-profile:0.0.1"]
-
-  # Build and push docker image: Update Profile
-  - name: "gcr.io/cloud-builders/docker"
-    id: update-profile:0.0.1
-    waitFor:
-      - test-unit
-    args:
-      - build
-      - --build-arg
-      - service=update-profile
-      - -t
-      - gcr.io/sweng-581-capstone/update-profile:0.0.1
-      - .
-
-  - name: "gcr.io/cloud-builders/docker"
-    id: push-update-profile
-    waitFor:
-      - update-profile:0.0.1
-    args: ["push", "gcr.io/sweng-581-capstone/update-profile:0.0.1"]
-
-  # Build and push docker image: provider-create-notification-processor
-  - name: "gcr.io/cloud-builders/docker"
-    id: provider-create-notification-profile-processor:0.0.1
-    waitFor:
-      - test-unit
-    args:
-      - build
-      - --build-arg
-      - service=provider-create-notification-processor
-      - -t
-      - gcr.io/sweng-581-capstone/provider-create-notification-profile-processor:0.0.1
-      - .
-
-  - name: "gcr.io/cloud-builders/docker"
-    id: push-provider-create-notification-profile-processor
-    waitFor:
-      - provider-create-notification-profile-processor:0.0.1
-    args:
-      [
-        "push",
-        "gcr.io/sweng-581-capstone/provider-create-notification-profile-processor:0.0.1",
-      ]
-
-  # Build and push docker image: provider-delete-notification-processor
-  - name: "gcr.io/cloud-builders/docker"
-    id: provider-delete-notification-profile-processor:0.0.1
-    waitFor:
-      - test-unit
-    args:
-      - build
-      - --build-arg
-      - service=provider-delete-notification-processor
-      - -t
-      - gcr.io/sweng-581-capstone/provider-delete-notification-profile-processor:0.0.1
-      - .
-
-  - name: "gcr.io/cloud-builders/docker"
-    id: push-provider-delete-notification-profile-processor
-    waitFor:
-      - provider-delete-notification-profile-processor:0.0.1
-    args:
-      [
-        "push",
-        "gcr.io/sweng-581-capstone/provider-delete-notification-profile-processor:0.0.1",
-      ]
-
-  # Deploy to cloud run
-  - name: "gcr.io/cloud-builders/gcloud"
-    waitFor:
-      - push-create-profile
-    args:
-      - beta
-      - run
-      - deploy
-      - create-profile
-      - --image=gcr.io/sweng-581-capstone/create-profile:0.0.1
-      - --region=us-central1
-      - --platform=managed
-
-  - name: "gcr.io/cloud-builders/gcloud"
-    waitFor:
-      - push-delete-profile
-    args:
-      - beta
-      - run
-      - deploy
-      - delete-profile
-      - --image=gcr.io/sweng-581-capstone/delete-profile:0.0.1
-      - --region=us-central1
-      - --platform=managed
-
-  - name: "gcr.io/cloud-builders/gcloud"
-    waitFor:
-      - push-query-profile
-    args:
-      - beta
-      - run
-      - deploy
-      - query-profile
-      - --image=gcr.io/sweng-581-capstone/query-profile:0.0.1
-      - --region=us-central1
-      - --platform=managed
-
-  - name: "gcr.io/cloud-builders/gcloud"
-    waitFor:
-      - push-update-profile
-    args:
-      - beta
-      - run
-      - deploy
-      - update-profile
-      - --image=gcr.io/sweng-581-capstone/update-profile:0.0.1
-      - --region=us-central1
-      - --platform=managed
-
-  - name: "gcr.io/cloud-builders/gcloud"
-    waitFor:
-      - push-provider-create-notification-profile-processor
-    args:
-      - beta
-      - run
-      - deploy
-      - provider-create-notification-profile-processor
-      - --image=gcr.io/sweng-581-capstone/provider-create-notification-profile-processor:0.0.1
-      - --region=us-central1
-      - --platform=managed
-
-  - name: "gcr.io/cloud-builders/gcloud"
-    waitFor:
-      - push-provider-delete-notification-profile-processor
-    args:
-      - beta
-      - run
-      - deploy
-      - provider-delete-notification-profile-processor
-      - --image=gcr.io/sweng-581-capstone/provider-delete-notification-profile-processor:0.0.1
-      - --region=us-central1
-      - --platform=managed
-
-images:
-  - "gcr.io/sweng-581-capstone/create-profile:0.0.1"
-  - "gcr.io/sweng-581-capstone/delete-profile:0.0.1"
-  - "gcr.io/sweng-581-capstone/query-profile:0.0.1"
-  - "gcr.io/sweng-581-capstone/update-profile:0.0.1"
-  - "gcr.io/sweng-581-capstone/provider-create-notification-profile-processor:0.0.1"
-  - "gcr.io/sweng-581-capstone/provider-delete-notification-profile-processor:0.0.1"
+    - '-c'
+    - |
+      gcloud builds submit $d --config=./src/services/provider-delete-notification-processor/cloudbuild.yaml
+      wait
