--- a/src/services/delete-profile/cloudbuild.yaml
+++ b/src/services/delete-profile/cloudbuild.yaml
@@ -15,14 +15,14 @@ steps:
       - --build-arg
       - service=delete-profile
       - -t
-      - gcr.io/sweng-581-capstone/delete-profile:0.0.1
+      - gcr.io/bookit-app/delete-profile:0.0.1
       - .
 
   - name: "gcr.io/cloud-builders/docker"
     id: push-delete-profile
     waitFor:
       - delete-profile:0.0.1
-    args: ["push", "gcr.io/sweng-581-capstone/delete-profile:0.0.1"]
+    args: ["push", "gcr.io/bookit-app/delete-profile:0.0.1"]
 
   # Deploy to cloud run
   - name: "gcr.io/cloud-builders/gcloud"
@@ -33,9 +33,9 @@ steps:
       - run
       - deploy
       - delete-profile
-      - --image=gcr.io/sweng-581-capstone/delete-profile:0.0.1
-      - --region=us-central1
+      - --image=gcr.io/bookit-app/delete-profile:0.0.1
+      - --region=us-east1
       - --platform=managed
 
 images:
-  - "gcr.io/sweng-581-capstone/delete-profile:0.0.1"
+  - "gcr.io/bookit-app/delete-profile:0.0.1"
