--- a/src/services/provider-delete-notification-processor/cloudbuild.yaml
+++ b/src/services/provider-delete-notification-processor/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
       - --build-arg
       - service=provider-delete-notification-processor
       - -t
-      - gcr.io/sweng-581-capstone/provider-delete-notification-profile-processor:0.0.1
+      - gcr.io/bookit-app/provider-delete-notification-profile-processor:0.0.1
       - .
 
   - name: "gcr.io/cloud-builders/docker"
@@ -25,7 +25,7 @@ steps:
     args:
       [
         "push",
-        "gcr.io/sweng-581-capstone/provider-delete-notification-profile-processor:0.0.1",
+        "gcr.io/bookit-app/provider-delete-notification-profile-processor:0.0.1",
       ]
 
   # Deploy to cloud run
@@ -37,9 +37,9 @@ steps:
       - run
       - deploy
       - provider-delete-notification-profile-processor
-      - --image=gcr.io/sweng-581-capstone/provider-delete-notification-profile-processor:0.0.1
-      - --region=us-central1
+      - --image=gcr.io/bookit-app/provider-delete-notification-profile-processor:0.0.1
+      - --region=us-east1
       - --platform=managed
 
 images:
-  - "gcr.io/sweng-581-capstone/provider-delete-notification-profile-processor:0.0.1"
+  - "gcr.io/bookit-app/provider-delete-notification-profile-processor:0.0.1"
